Game menu, dark mode fixes, media querrys

--- a/src/index.scss
+++ b/src/index.scss
@@ -19,14 +19,24 @@
   // Navbar
   .nav-icon {
     @apply w-10 h-10 border border-secondary-accent flex text-title justify-center items-center rounded-md hover:bg-secondary  transition-colors hover:border-accent hover:shadow-lg;
-    @apply dark:hover:bg-dark-subtitle dark:bg-dark-primary dark:border-black dark:text-dark-title;
+    @apply dark:hover:bg-black dark:bg-dark-primary dark:border-black dark:text-dark-title dark:hover:border-accent;
   }
   .nav-text-link {
     @apply text-subtitle  hover:text-accent font-semibold text-sm transition-colors;
-    @apply dark:text-dark-subtitle dark:hover:text-accent;
+    @apply dark:text-dark-title dark:hover:text-accent;
   }
   .nav-splitter {
     @apply h-8 w-px bg-secondary-accent max-[600px]:hidden;
     @apply dark:bg-black;
+  }
+
+  // Home
+
+  .game-card {
+    @apply h-24 rounded-xl flex items-center bg-right bg-no-repeat;
+  }
+  .game-card-artwork {
+    @apply w-full h-full rounded-xl bg-gradient-to-r from-secondary from-40% flex items-center pl-8 border border-secondary hover:border-accent hover:shadow-xl transition;
+    @apply dark:from-dark-secondary dark:from-40% dark:border-dark-secondary dark:hover:border-accent dark:hover:shadow-xl;
   }
 }
